--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/projects.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/js/projects.js"></script>
     </head>
     <body>
 
