--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hitanshu Dhawan</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="img/ico" href="images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,800">
