--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
         <script src="js/index_particles.js"></script>
 
-        <div id="profile-box" class="centre">
+        <div id="profile-box" class="container centre">
             <img id="profile-pic" src="/images/index/profile_pic.jpg">
             <h1>Hitanshu Dhawan</h1>
             <div class="typewriter">
