--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hitanshu Dhawan</title>
+        <title>Hitanshu Dhawan | Personal Portfolio</title>
+        <meta name="author" content="Hitanshu Dhawan">
+        <meta name="description" content="...todo...">
+        <meta name="keywords" content="hitanshu, hitanshu dhawan, hitanshu projects, hitanshu dhawan projects, hitanshu mriu, hitanshu dhawan mriu, hitanshu manav rachna, hitanshu dhawan manav rachna">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="img/ico" href="/images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -99,14 +102,7 @@
         <div id="about-me" class="container">
             <h1 class="centre">About Me</h1>
             <!-- TODO: write about yourself bro -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I'm Hitanshu Dhawan, a passionate software engineer who's always on a quest to learn new technologies and make some awesome stuff using them. Problems always interest me and solving them gives an adrenaline rush to me.</p>
         </div>
 
         <div id="footer">
