added meta-data ad about-me section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hitanshu Dhawan | Personal Portfolio</title>
         <meta name="author" content="Hitanshu Dhawan">
-        <meta name="description" content="...todo...">
+        <meta name="description" content="Hitanshu Dhawan is a passionate software engineer who's always on a quest to learn new technologies and make some awesome stuff using them.">
         <meta name="keywords" content="hitanshu, hitanshu dhawan, hitanshu projects, hitanshu dhawan projects, hitanshu mriu, hitanshu dhawan mriu, hitanshu manav rachna, hitanshu dhawan manav rachna">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="img/ico" href="/images/favicon.ico">
@@ -32,8 +32,8 @@
                 </div>
                 <div id="collapseNavbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="files/HitanshuDhawanResume.pdf" target="_blank">Résumé</a></li>
+                        <li><a href="/projects.html">Projects</a></li>
+                        <li><a href="/files/HitanshuDhawanResume.pdf" target="_blank">Résumé</a></li>
                         <li><a id="nav-about-me" href="#about-me">About Me</a></li>
                     </ul>
                 </div>
@@ -101,8 +101,20 @@
 
         <div id="about-me" class="container">
             <h1 class="centre">About Me</h1>
-            <!-- TODO: write about yourself bro -->
-            <p>I'm Hitanshu Dhawan, a passionate software engineer who's always on a quest to learn new technologies and make some awesome stuff using them. Problems always interest me and solving them gives an adrenaline rush to me.</p>
+            <p>I'm Hitanshu Dhawan, a passionate software engineer who's always on a quest to learn new technologies and make some awesome stuff using them. Problems always interest me and solving them gives an adrenaline rush.</p>
+            <p>Technologies I know about:</p>
+            <ul>
+                <li>Android App Development</li>
+                <li>Web Development (front-end)</li>
+                <li>C/C++</li>
+                <li>Core Java</li>
+                <li>Python</li>
+            </ul>
+            <p>Right now I'm learning back-end web development and is on a journey to become a full-stack web developer.</p>
+            <p>I believe in learning by doing, and hence here are some of my <a href="projects.html">projects</a> which I made.</p>
+            <br>
+            <p>My life on a sheet of paper : <a href="/files/HitanshuDhawanResume.pdf">Résumé</a></p>
+            <p>You can contact me here : hitanshudhawan1996@gmail.com</p>
         </div>
 
         <div id="footer">
