--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hitanshu Dhawan</title>
+        <title>Hitanshu Dhawan | Personal Portfolio</title>
+        <meta name="author" content="Hitanshu Dhawan">
+        <meta name="description" content="Projects made by Hitanshu Dhawan. Hitanshu Dhawan is a passionate software engineer who's always on a quest to learn new technologies and make some awesome stuff using them.">
+        <meta name="keywords" content="hitanshu, hitanshu dhawan, hitanshu projects, hitanshu dhawan projects, hitanshu mriu, hitanshu dhawan mriu, hitanshu manav rachna, hitanshu dhawan manav rachna">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="img/ico" href="images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
