project details added

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,8 @@
                 <img src="/images/projects/popcorn.png">
                 <div>
                     <h1>PopCorn</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>PopCorn is an android app that keeps you updated with all the Movies and TV Shows that you love.</p>
+                    <p>It is an open-source project available on GitHub and Google Play Store. It uses advanced android libraries and components like RecyclerView, Fragments, Glide, Retrofit, SQLite etc.</p>
                 </div>
             </div>
             </a>
@@ -55,7 +56,7 @@
                 <!-- <img src=""> -->
                 <div>
                     <h1>Todo</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A simple Todo App with Material Design Guidelines having clean and beatiful UI.</p>
                 </div>
             </div>
             </a>
@@ -65,7 +66,8 @@
                 <img src="/images/projects/imagestegno.png">
                 <div>
                     <h1>Image​ ​Steganography</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A software for concealing textual information inside of an image using OpenCV library in C++.</p>
+                    <p>Implemented Least Significant Bit (LSB) algorithm for Image Steganography.</p>
                 </div>
             </div>
             </a>
@@ -75,7 +77,8 @@
                 <img src="/images/projects/tictactoe.png">
                 <div>
                     <h1>Ultimate​ ​TicTacToe</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>An unbeatable computer game which can play Tic-Tac-Toe using Artificial Intelligence.</p>
+                    <p>Implemented MinMax algorithm for analyzing all possible moves and selecting the best one.</p>
                 </div>
             </div>
             </a>
@@ -85,7 +88,8 @@
                 <img src="/images/projects/10print.gif">
                 <div>
                     <h1>10PRINT</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>10 PRINT CHR$(205.5+RND(1)); : GOTO 10</p>
+                    <p></p>
                 </div>
             </div>
             </a>
@@ -95,7 +99,7 @@
                 <img src="/images/projects/brainfuck.png">
                 <div>
                     <h1>Brainfuck Compiler</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A simple compiler for Brainfuck programming language written in C++.</p>
                 </div>
             </div>
             </a>
@@ -105,7 +109,7 @@
                 <!-- <img src=""> -->
                 <div>
                     <h1>TapTap</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Clone of patatap.com</p>
                 </div>
             </div>
             </a>
@@ -115,7 +119,8 @@
                 <img src="/images/projects/wallpapers.png">
                 <div>
                     <h1>Dynamic Wallpapers</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A python script that automatically changes desktop wallpaper based on the time of day.</p>
+                    <p>sunrise --> morning --> afternoon --> sunset --> night --> sunrise</p>
                 </div>
             </div>
             </a>
@@ -125,7 +130,7 @@
                 <img src="/images/projects/laptopcharging.jpg">
                 <div>
                     <h1>Battery Beep</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A python script to play a beep sound when laptop battery gets fully charged. Now keep your battery safe.</p>
                 </div>
             </div>
             </a>
@@ -135,7 +140,7 @@
                 <img src="/images/projects/sudoku.png">
                 <div>
                     <h1>Sudoku Solver</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>A C program for solving Sudoku puzzles using Backtracking.</p>
                 </div>
             </div>
             </a>
