Todo App added in projects.html

--- a/projects.html
+++ b/projects.html
@@ -53,10 +53,10 @@
 
             <a href="https://github.com/hitanshu-dhawan/Todo" target="_blank">
             <div class="container list-item">
-                <!-- <img src=""> -->
+                <img src="/images/projects/todo.png">
                 <div>
                     <h1>Todo</h1>
-                    <p>A simple Todo App with Material Design Guidelines having clean and beatiful UI.</p>
+                    <p>Simple Todo App to demonstrate Content Providers, Cursor Loaders, Cursor Adapters, Widgets, Notifications etc.</p>
                 </div>
             </div>
             </a>
